# elm

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: activation_functions.rs  io.rs  lib.rs  loss.rs  training_metrics.rs
src/docs/activation_functions/: activation_functions.xlsx
