[package]
name = "elm"
description = "A minimalist framework for Extreme Learning Machines (ELMs)."
version = "0.2.3"
edition = "2021"
license = "MIT"
keywords = ["ai", "blas", "elm", "machine-learning", "neural-network"]
categories = ["mathematics", "science", "science::neuroscience", "science::robotics", "science::robotics"]
repository = "https://github.com/mbfernan/elm.git"
authors = [
    "Marcos Blanco Fernandes <mbfernan@outlook.com>"
]
exclude = [
    "src/docs"
]

[lib]

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
rand_distr = "0.4.3"